# pace

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ezec.hpp  pace.hpp
examples/configure/: RELEASE
examples/epics/: .gitignore
examples/epics/configure/: RELEASE
examples/epics/exampleApp/: Makefile  example.cpp
examples/exampleApp/: Makefile  bind.cpp
tests/: CMakeLists.txt  test.db  test_ao.cpp  test_context.cpp  test_convert.cpp  test_group.cpp  test_helpers.hpp  test_integration.cpp  test_longout.cpp  test_mbbo.cpp  test_pva.cpp  test_stringout.cpp  test_waveform.cpp
